--- a/neighbourhood/templates/business/business_form.html
+++ b/neighbourhood/templates/business/business_form.html
@@ -1,4 +1,4 @@
-<!-- {% load bootstrap5 %}
+{% load bootstrap5 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -26,4 +26,4 @@
     </div>
 </body>
 
-</html> -->
+</html>
