--- a/neighbourhood/templates/business/business_index.html
+++ b/neighbourhood/templates/business/business_index.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="container-fluid ground">
     <div>
@@ -23,4 +23,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock%} -->
+{% endblock%}
