created a login page

--- a/neighbourhood/templates/registration/login.html
+++ b/neighbourhood/templates/registration/login.html
@@ -1,4 +1,4 @@
-<!-- {%extends "base.html"%} {% load bootstrap5 %} {% block title %}Login{% endblock %}
+{%extends "base.html"%} {% load bootstrap5 %} {% block title %}Login{% endblock %}
 {% block content %}
 <div class="card" style="max-width: 30rem; margin-left: 30%; margin-top: 5%; padding: 2%">
   <div class="col-md-4"></div>
@@ -27,4 +27,4 @@
   </div>
   <div class="col-md-4"></div>
 </div>
-{% endblock %} -->
+{% endblock %}
