--- a/neighbourhood/templates/base.html
+++ b/neighbourhood/templates/base.html
@@ -1,4 +1,4 @@
-<!-- {% load bootstrap5%}
+{% load bootstrap5%}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -29,4 +29,4 @@
      {% bootstrap_javascript %}
     {% endblock %}
 </body>
-</html> -->
+</html>
