--- a/neighbourhood/templates/contact_info.html
+++ b/neighbourhood/templates/contact_info.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="container">
     <div class="row" style="margin-top:10px;">
@@ -24,4 +24,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock %} -->
+{% endblock %}
