--- a/neighbourhood/templates/create_post.html
+++ b/neighbourhood/templates/create_post.html
@@ -1,4 +1,4 @@
-<!-- {% load bootstrap5 %}
+{% load bootstrap5 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -29,4 +29,4 @@
     {% bootstrap_javascript %} {% endblock %}
 </body>
 
-</html> -->
+</html>
