--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
 <div class="container-fluid ground">
@@ -35,4 +35,4 @@
         </div>
         {% endfor %}
     </div>
-{% endblock %} -->
+{% endblock %}
