--- a/neighbourhood/templates/navbar.html
+++ b/neighbourhood/templates/navbar.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(231, 195, 195)">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(231, 195, 195)">
   <div class="container-fluid">
     <a class="navbar-brand" href="/" style="font-size: 20px;">My Neighbourhood</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -48,4 +48,4 @@
       </ul>
     </div>
   </div>
-</nav> -->
+</nav>
