--- a/neighbourhood/templates/new_profile.html
+++ b/neighbourhood/templates/new_profile.html
@@ -1,4 +1,4 @@
-<!-- {% load bootstrap5 %}
+{% load bootstrap5 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -30,4 +30,4 @@
     {% bootstrap_javascript %} {% endblock %}
 </body>
 
-</html> -->
+</html>
