--- a/neighbourhood/templates/profile.html
+++ b/neighbourhood/templates/profile.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="container" style="margin-top:30px;">
     <div class="row profile">
@@ -69,4 +69,4 @@
     </div>
 </div>
 
-{% endblock %} -->
+{% endblock %}
