--- a/neighbourhood/templates/search.html
+++ b/neighbourhood/templates/search.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="container-fluid">
     <div class="row heading" style="margin-left:20px;">
@@ -27,4 +27,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock %} -->
+{% endblock %}
