--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -2,9 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid ground">
-    <div>
-        <h4 class="text-center heading">Posts</h4>
-    </div>
+    <div><h4 class="text-center heading">Posts</h4></div>
     <div class="row">
         {% for post in posts %}
         <div class="col-md-4 main-page d-flex" style=" margin-top: 5px;">
@@ -13,7 +11,7 @@
                     <div class="card-header"><strong>Hood:</strong>{{post.hood_post}}</div>
                     <div class="view overlay">
                         <img class="card-img-top" src="{{post.post_picture.url}}" alt="Card image cap">
-                            <div class="mask rgba-white-slight"></div>
+                        <div class="mask rgba-white-slight"></div>
                         </a>
                     </div>
                     <div class="card-body">
@@ -22,8 +20,7 @@
                     </div>
                     <div class="rounded-bottom mdb-color lighten-3 text-center pt-3">
                         <ul class="list-unstyled list-inline font-small">
-                            <li class="list-inline-item pr-2 white-text"> Posted on:{{post.date_posted}}
-                            </li>
+                            <li class="list-inline-item pr-2 white-text"> Posted on:{{post.date_posted}}</li>
                         </ul>
                     </div>
                 </div>
@@ -35,4 +32,4 @@
         </div>
         {% endfor %}
     </div>
-{% endblock %}
+    {% endblock %}
